--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,12 @@
         android:layout_height="match_parent"
         tools:context="deakin.gopher.guardian.view.general.MainActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/my_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+
     <Button
             android:id="@+id/getStartedButton"
             android:layout_width="wrap_content"
