--- a/app/src/main/res/layout/activity_homepage4caretaker.xml
+++ b/app/src/main/res/layout/activity_homepage4caretaker.xml
@@ -17,14 +17,14 @@
         android:layout_marginTop="88dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView"
-        app:icon="@drawable/menu_settings"
+        app:icon="@drawable/settings"
         app:iconGravity="top"
         app:iconPadding="10dp"
         app:iconSize="42dp"
         app:cornerRadius="16dp"
         android:elevation="20dp"
         android:stateListAnimator="@animator/button_state_list_animator"
-        app:backgroundTint="@color/deep_blue"
+        app:backgroundTint="@color/dark_blue"
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:text="@string/settings"
         android:textColor="@color/white"
@@ -42,14 +42,14 @@
         android:layout_marginTop="88dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView"
-        app:icon="@drawable/patient_list_icon"
+        app:icon="@drawable/list"
         app:iconGravity="top"
         app:iconPadding="10dp"
         app:iconSize="42dp"
         app:cornerRadius="16dp"
         android:elevation="20dp"
         android:stateListAnimator="@animator/button_state_list_animator"
-        app:backgroundTint="@color/deep_blue"
+        app:backgroundTint="@color/dark_blue"
         app:iconTint="@color/off_white"
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:text="@string/patient_list"
@@ -75,7 +75,7 @@
         app:cornerRadius="16dp"
         android:elevation="20dp"
         android:stateListAnimator="@animator/button_state_list_animator"
-        app:backgroundTint="@color/deep_blue"
+        app:backgroundTint="@color/dark_blue"
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:text="@string/log_out"
         android:textColor="@color/white"
@@ -101,7 +101,7 @@
         app:cornerRadius="16dp"
         android:elevation="20dp"
         android:stateListAnimator="@animator/button_state_list_animator"
-        app:backgroundTint="@color/deep_blue"
+        app:backgroundTint="@color/dark_blue"
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:text="@string/profile"
         android:textColor="@color/white"
@@ -123,7 +123,7 @@
             android:layout_width="0dp"
             android:layout_height="220dp"
             android:layout_marginTop="-40dp"
-            app:cardBackgroundColor="@color/deep_blue"
+            app:cardBackgroundColor="@color/dark_blue"
             app:cardCornerRadius="40dp"
             app:cardElevation="4dp"
             app:layout_constraintEnd_toEndOf="parent"
