--- a/app/src/main/res/layout/activity_patient_list_item.xml
+++ b/app/src/main/res/layout/activity_patient_list_item.xml
@@ -10,8 +10,8 @@
         android:layout_width="375dp"
         android:layout_height="64dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="5dp"
-        app:cardCornerRadius="30dp"
+        android:layout_marginTop="1dp"
+        app:cardCornerRadius="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/patient_list_searchView">
 
@@ -50,6 +50,7 @@
                 android:layout_marginTop="5dp"
                 android:contentDescription="TODO"
                 app:srcCompat="@drawable/right_arrow_2"
+                app:tint = "@color/deep_blue"
                 tools:layout_editor_absoluteX="337dp"
                 tools:layout_editor_absoluteY="234dp" />
 
