--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,9 @@
     <color name="light_blue_A200">#FF40C4FF</color>
     <color name="light_blue_A400">#FF00B0FF</color>
     <color name="deep_blue">#003366</color>
+    <color name="dark_blue">#051462</color>
     <color name="black_overlay">#66000000</color>
+    <color name="patient_status_bar_color">#FF5722</color>
     <color name="bordercolor">#000000</color>
     <color name="red">#fc0303</color>
     <color name="orange">#fc8803</color>
