--- a/app/src/main/res/layout/activity_homepage4caretaker.xml
+++ b/app/src/main/res/layout/activity_homepage4caretaker.xml
@@ -7,7 +7,7 @@
         tools:context="deakin.gopher.guardian.view.general.Homepage4caretaker"
         tools:layout_editor_absoluteX="-22dp"
         tools:layout_editor_absoluteY="-108dp"
-        android:background="@color/off_white">
+        android:background="@color/dark_blue">
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/settingsButton3"
@@ -24,14 +24,15 @@
         app:cornerRadius="16dp"
         android:elevation="20dp"
         android:stateListAnimator="@animator/button_state_list_animator"
-        app:backgroundTint="@color/dark_blue"
+        app:backgroundTint="@color/white"
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:text="@string/settings"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:fontFamily="@font/poppins_bold"
         android:textSize="11sp"
         android:paddingTop="20dp"
         android:paddingBottom="16dp"
+        app:iconTint="@color/black"
         android:gravity="center" />
 
     <com.google.android.material.button.MaterialButton
@@ -49,11 +50,11 @@
         app:cornerRadius="16dp"
         android:elevation="20dp"
         android:stateListAnimator="@animator/button_state_list_animator"
-        app:backgroundTint="@color/dark_blue"
-        app:iconTint="@color/off_white"
+        app:backgroundTint="@color/white"
+        app:iconTint="@color/black"
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:text="@string/patient_list"
-        android:textColor="@color/off_white"
+        android:textColor="@color/black"
         android:fontFamily="@font/poppins_bold"
         android:textSize="11sp"
         android:paddingTop="20dp"
@@ -75,14 +76,15 @@
         app:cornerRadius="16dp"
         android:elevation="20dp"
         android:stateListAnimator="@animator/button_state_list_animator"
-        app:backgroundTint="@color/dark_blue"
+        app:backgroundTint="@color/white"
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:text="@string/log_out"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:fontFamily="@font/poppins_bold"
         android:textSize="11sp"
         android:paddingTop="20dp"
         android:paddingBottom="16dp"
+        app:iconTint="@color/black"
         android:paddingStart="20dp"
         android:gravity="center" />
 
@@ -101,14 +103,15 @@
         app:cornerRadius="16dp"
         android:elevation="20dp"
         android:stateListAnimator="@animator/button_state_list_animator"
-        app:backgroundTint="@color/dark_blue"
+        app:backgroundTint="@color/white"
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:text="@string/profile"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:fontFamily="@font/poppins_bold"
         android:textSize="11sp"
         android:paddingTop="20dp"
         android:paddingBottom="16dp"
+        app:iconTint="@color/black"
         android:paddingStart="20dp"
         android:gravity="center" />
 
@@ -123,7 +126,7 @@
             android:layout_width="0dp"
             android:layout_height="220dp"
             android:layout_marginTop="-40dp"
-            app:cardBackgroundColor="@color/dark_blue"
+            app:cardBackgroundColor="@color/off_white"
             app:cardCornerRadius="40dp"
             app:cardElevation="4dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -134,32 +137,32 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/medicalDiagnosticsTitleTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:fontFamily="@font/poppins_bold"
-                android:text="@string/welcome_caretaker"
-                android:textColor="@color/off_white"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/medicalDiagnosticsEditImageView" />
-
             <ImageView
                 android:id="@+id/medicalDiagnosticsEditImageView"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
-                android:layout_marginTop="54dp"
+                android:layout_marginTop="60dp"
                 android:contentDescription="TODO"
-                app:layout_constraintBottom_toTopOf="@+id/medicalDiagnosticsTitleTextView"
+                app:layout_constraintTop_toBottomOf="@+id/medicalDiagnosticsTitleTextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/heart" />
+
+            <TextView
+                android:id="@+id/medicalDiagnosticsTitleTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="30dp"
+                android:fontFamily="@font/poppins_bold"
+                android:text="@string/welcome_caretaker"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/medicalDiagnosticsEditImageView" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
